--- a/css/syntax.css
+++ b/css/syntax.css
@@ -3,6 +3,7 @@
 
 .highlight pre code * {
   white-space: nowrap;    // this sets all children inside to nowrap
+  overflow: auto;
 }
 
 .highlight pre {
