--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -5,9 +5,9 @@
  */
 
 body {
-  font-family: 'Lora', 'Times New Roman', serif;
-  font-size: 20px;
-  color: #404040;
+  font-family: 'Sumana', 'Times New Roman', serif;
+  font-size: 24px;
+  color: rgba(0,0,0,0.84)
 }
 p {
   line-height: 1.5;
