--- a/layouts/layouts/partials/css.html
+++ b/layouts/layouts/partials/css.html
@@ -13,7 +13,7 @@
 </style>
 
 <!-- main -->
-<link rel="stylesheet" href="/engineering-records/css/main.css">
+<link rel="stylesheet" href="/css/main.css">
 
 <!-- custom -->
 {{ range .Site.Params.css }} <link rel="stylesheet" href="{{ . }}"> {{ end }}
