Update configs and title tags

--- a/layouts/layouts/index.html
+++ b/layouts/layouts/index.html
@@ -4,7 +4,7 @@
 
     <div class="intro">
 
-        <h1>{{ .Site.Title }}</h1>
+        <h1>RedVelvet</h1>
 
         <h2>{{ markdownify .Site.Params.Description }}</h2>
 
