--- a/layouts/layouts/partials/header.html
+++ b/layouts/layouts/partials/header.html
@@ -4,7 +4,7 @@
         {{ partial "head-open" . }}
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>{{ .Title }} Golang Blog | How to Learn Golang</title>
+        <title>{{ .Title }} | RedVelvet Golang Blog</title>
         {{ partial "css" . }} {{ partial "js" . }} {{ .Hugo.Generator }}
         {{ if .RSSLink }}
         <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
