--- a/layouts/layouts/partials/header.html
+++ b/layouts/layouts/partials/header.html
@@ -4,6 +4,7 @@
         {{ partial "head-open" . }}
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta description="{{ .Params.meta_description }}">
         <title>{{ .Title }} | RedVelvet Golang Blog</title>
         {{ partial "css" . }} {{ partial "js" . }} {{ .Hugo.Generator }}
         {{ if .RSSLink }}
