--- a/layouts/layouts/partials/header.html
+++ b/layouts/layouts/partials/header.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta description="{{ .Params.meta_description }}">
-        <title>{{ .Title }} | RedVelvet Golang Blog</title>
+        <title>{{ .Title }} | VelvetReactor</title>
         {{ partial "css" . }} {{ partial "js" . }} {{ .Hugo.Generator }}
         {{ if .RSSLink }}
         <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
