Demystifying Javascript Prototypes [Fixes #60]

--- a/layouts/layouts/_default/single.html
+++ b/layouts/layouts/_default/single.html
@@ -17,6 +17,13 @@
 
     {{ end }}
 
+    <hr />
+
+    <p>Want to become a better programmer?</p>
+    <a class="subscribe btn btn-success btn-md" href="http://eepurl.com/dgm5Xn">Subscribe!</a>
+
+    <hr />
+
     {{ if and .Site.DisqusShortname (not .Params.disableComments) }}
 
         <h4 class="page-header">Comments</h4>
