--- a/layouts/layouts/index.html
+++ b/layouts/layouts/index.html
@@ -2,9 +2,10 @@
 
 <main>
     <div class="intro">
-        <h1>RedVelvet</h1>
+        <h1>Velvet Reactor</h1>
         <h2>{{ markdownify .Site.Params.Description }}</h2>
     </div>
+    <a class="subscribe btn btn-success btn-lg" href="http://eepurl.com/dgm5Xn">Subscribe!</a>
 </main>
 
 {{ partial "footer" . }}
