Useful Methods Series: Array.map and Array.join [Fixes #54]

--- a/layouts/layouts/partials/css.html
+++ b/layouts/layouts/partials/css.html
@@ -2,6 +2,7 @@
 
     html body {
         font-family: '{{ .Site.Params.font }}', sans-serif;
+        font-size: 1.6em;
         background-color: {{ .Site.Params.backgroundColor | default "white" }};
     }
 
