--- a/layouts/layouts/partials/header.html
+++ b/layouts/layouts/partials/header.html
@@ -4,9 +4,14 @@
         {{ partial "head-open" . }}
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="{{ .Params.meta_description }}">
+        {{ if isset .Params "meta_description" }}
+          <meta name="description" content="{{ .Params.meta_description }}">
+          <meta property="og:description" content="{{ .Params.meta_description }}">
+        {{ else }}
+          <meta name="description" content="Velvet Reactor is a software consultancy based in New York/New Jersey specializing in Javascript, Golang and Ruby. Our blog digs into difficult concepts of these languages, object oriented design, and even economics, game theory and asynchronous/concurrent programming and presents it to the reader in a easy-to-understand and actionable way.">
+          <meta property="og:description" content="Velvet Reactor is a software consultancy based in New York/New Jersey specializing in Javascript, Golang and Ruby. Our blog digs into difficult concepts of these languages, object oriented design, and even economics, game theory and asynchronous/concurrent programming and presents it to the reader in a easy-to-understand and actionable way.">
+        {{ end }}
         <meta property="og:title" content="{{ .Title }}">
-        <meta property="og:description" content="{{ .Params.meta_description }}">
         <title>{{ .Title }} | VelvetReactor</title>
         {{ partial "css" . }} {{ partial "js" . }} {{ .Hugo.Generator }}
         {{ if .RSSLink }}
